Fix image size and alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,37 +14,41 @@
  *= require_self
  */
 
- .container {
+.container {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-content: flex-start;
   padding-left: 7%;
-   gap: 5px;
-   
- }
+  gap: 5px;
+}
 
- .card {
-   border-radius: 4px;
-   border-top-left-radius: 4px;
-   border-top-right-radius: 4px;
-   border-bottom-right-radius: 4px;
-   border-bottom-left-radius: 4px;
-   padding: 5px;
-   border: none;
-   cursor: pointer;
-   margin-bottom: 5px;
- }
+.card {
+  border-radius: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 5px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
 
- .card:hover {
-   box-shadow: 0 4px 12px 0 rgb(44 44 45 / 7%), 0 0 20px 0 rgb(44 44 45 / 7%);
- }
+.pet-thumbnail {
+  width: 100%;
+  height: auto;
+}
 
- .card-img-top {
-   border-radius: 4px;
- }
+.card:hover {
+  box-shadow: 0 4px 12px 0 rgb(44 44 45 / 7%), 0 0 20px 0 rgb(44 44 45 / 7%);
+}
 
- 
-
-
- 
+.card-img-top {
+  border-radius: 4px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 3px;
+}
